Use non-legacy buildpack

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,6 @@
 applications:
 - name: joomla-cms
-  framework:
-    name: php
+  buildpack: https://github.com/cyberdelia/heroku-buildpack-php.git
   instances: 1
   mem: 128
   services:
@@ -13,5 +12,5 @@ applications:
     hooks:
       post-staging:
       # setting up in filesystem
-      - sh stackato-setup.sh
+      - sh www/stackato-setup.sh
       - echo $VCAP_SERVICES | json mysql | json -a credentials
