Switch to built-in buildpack

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,5 @@
 applications:
 - name: joomla-cms
-  buildpack: https://github.com/heroku/heroku-buildpack-php.git
   instances: 1
   mem: 128
   services:
@@ -12,7 +11,7 @@ applications:
     hooks:
       post-staging:
       # setting up in filesystem
-      - sh stackato-setup.sh
+      - sh htdocs/stackato-setup.sh
       - echo $VCAP_SERVICES | json mysql | json -a credentials
     requirements:
       ubuntu:
