--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,6 @@
 applications:
 - name: joomla-cms
-  buildpack: https://github.com/heroku/heroku-buildpack-php.git
+  buildpack: https://github.com/cloudfoundry/php-buildpack#v3.1.0
   instances: 1
   mem: 128
   services:
@@ -12,8 +12,9 @@ applications:
     hooks:
       post-staging:
       # setting up in filesystem
-      - sh stackato-setup.sh
+      - sh htdocs/stackato-setup.sh
       - echo $VCAP_SERVICES | json mysql | json -a credentials
     requirements:
       ubuntu:
       - libjpeg62
+  timeout: 180
